Add images to demo

--- a/neurofeedback/bands/www/index.html
+++ b/neurofeedback/bands/www/index.html
@@ -15,6 +15,7 @@
                 <h2 class="title">Power Bands</h2>
                 <table class="table is-bordered is-narrow is-fullwidth">
                     <thead>
+                        <th></th>
                         <th>Band</th>
                         <th>Absolute (uV)</th>
                         <th>Relative (%)</th>
@@ -22,30 +23,35 @@
                     </thead>
                     <tbody>
                         <tr>
+                            <td ><img src="assets/img/delta-brainwaves.jpg"></td>
                             <td>Delta (< 4Hz)</td>
                             <td id="delta_absolute"></td>
                             <td id="delta_relative"></td>
                             <td style="width: 100%;"><progress id="delta_progress" value="0" max="100"></progress></td>
                         </tr>
                         <tr>
+                            <td ><img src="assets/img/theta-brainwaves.jpg"></td>
                             <td>Theta (4-7Hz)</td>
                             <td id="theta_absolute"></td>
                             <td id="theta_relative"></td>
                             <td><progress id="theta_progress" value="0" max="100"></progress></td>
                         </tr>
                         <tr>
+                            <td ><img src="assets/img/alpha-brainwaves.jpg"></td>
                             <td>Alpha (8-12Hz)</td>
                             <td id="alpha_absolute"></td>
                             <td id="alpha_relative"></td>
                             <td><progress id="alpha_progress" value="0" max="100"></progress></td>
                         </tr>
                         <tr>
+                            <td ><img src="assets/img/beta-brainwaves.jpg"></td>
                             <td>Beta (13-25Hz)</td>
                             <td id="beta_absolute"></td>
                             <td id="beta_relative"></td>
                             <td><progress id="beta_progress" value="0" max="100"></progress></td>
                         </tr>
                         <tr>
+                            <td ><img src="assets/img/gamma-brainwaves.jpg"></td>
                             <td>Gamma (25-40Hz)</td>
                             <td id="gamma_absolute"></td>
                             <td id="gamma_relative"></td>
