Refactoring post PC review.

--- a/roshambo/www/index.html
+++ b/roshambo/www/index.html
@@ -26,12 +26,12 @@
             <tr>
                 <td>A1</td>
                 <td>Flexor</td>
-                <td id="A1"></td>
+                <td id="A1_EMG"></td>
             </tr>
             <tr>
                 <td>A2</td>
                 <td>Abductor</td>
-                <td id="A2"></td>
+                <td id="A2_EMG"></td>
             </tr>
             </tbody>
         </table>
