--- a/neurofeedback/bands/www/index.html
+++ b/neurofeedback/bands/www/index.html
@@ -22,6 +22,7 @@
                         <th>Indicator</th>
                     </thead>
                     <tbody>
+                        <!-- Brainwaves images by Nick Taras from <a href="https://thenounproject.com/nick.taras/" -->
                         <tr>
                             <td ><img src="assets/img/delta-brainwaves.png"></td>
                             <td>Delta (< 4Hz)</td>
